# tagalog-voice-agent

./: .gitignore  README.md  bot.py  bot_config.py  pipeline.py  prompt_builder.py  prompts.json  pyproject.toml  server.py  tools.py  transcript.py  webhooks.py
